<resources>
    <string name="app_name">OtherHalf</string>
    <string name="facebook_app_id">234873970855774</string>
    <string name="fb_login_protocol_scheme">fb234873970855774</string>
    <string name="welcome">Welcome</string>
    <string name="email_string">Email</string>
    <string name="password_string">Password</string>
    <string name="login_string">Login</string>
    <string name="forgot_password_string">Forgot Password?</string>
    <string name="no_account_string">Don\'t have an account?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="i_am_a">I am a</string>
    <string name="man_string">Man</string>
    <string name="women_string">Women</string>
    <string name="my_age_string">My age is</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_explore">Explore</string>
    <string name="title_discover">Discover</string>
    <string name="title_requests">Requests</string>
    <string name="title_chat">Chat</string>
    <string name="title_menu">Menu</string>
    <string name="my_profile">My Profile</string>
    <string name="get_started">Get Started</string>
    <string name="example_text">Who likr to have good timeand talk about all types of subjects, like to travel when everpossible.and always loyal and devoted, im honest strait and hate playersand cheaters.</string>
    <string name="login_with_facebook">Login With Facebook</string>
    <string name="potential_matches">Potential Matches</string>
    <string name="example_name">Mikerjol</string>
    <string name="example_location">Islamabad</string>
    <string name="chat">Chat</string>
    <string name="start_swiping">Start Swiping</string>
    <string name="you_matched">You matched with Mikerjol</string>
    <string name="enter_message">Enter Message</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="profile_image">Profile Image</string>
    <string name="choose_image">Choose image</string>
    <string name="photo_description">Choose your best and clear photo for profile</string>
    <string name="from_gallery">From Gallery</string>
    <string name="take_a_shot">Take a shot</string>
    <string name="who_messaged_you">Who Messaged you</string>
    <string name="settings">Settings</string>
    <string name="interest_strings">Hobbies, tastes, music, movies and sports</string>
    <string name="basics_string">Basic information about your account</string>
    <string name="description_string">Tell your story</string>
    <string name="descriptions">Descriptions</string>
    <string name="basics">Basics</string>
    <string name="interests">Interests</string>
    <string name="profile_photo_string">Show who you are</string>
    <string name="example_email">sherazali@gmail.com</string>
    <string name="password_description">Change your password</string>
    <string name="location_string">Location</string>
    <string name="location_descipton">Enable your location to get more relevant matches</string>
    <string name="notifications_string">Notifications</string>
    <string name="notifications_description">Choose the notifications you would like to recieve</string>
    <string name="blocklist_string">Blocklist</string>
    <string name="block_description">Check the list of the members you\'ve blocked</string>
    <string name="logout_description">See you later</string>
    <string name="logout_string">Logout</string>
    <string name="google_maps_key">AIzaSyD_acSGWf6flgHO5t7LLRYRjKVYS19C9s0</string>
    <string name="current_city">Current City</string>
    <string name="email">Email</string>
    <string name="next">Next</string>
    <string name="not_set_value">Not Set</string>
    <string name="description">Description</string>
    <string name="i_m_looking_for">I\'m looking for</string>
    <string name="save">Save</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="looking_for">Looking for</string>
    <string name="current_location">Current Location</string>
    <string name="social_status">Social Status</string>
    <string name="occupation">Occupation</string>
    <string name="not_set">Not Set</string>
    <string name="education">Education</string>
    <string name="status">Status</string>
    <string name="kids">Kids</string>
    <string name="living_style">Living style</string>
    <string name="education_and_status">Education and Status</string>
    <string name="marriage">Marriage</string>
    <string name="marriage_misyar">Marriage Misyar</string>
    <string name="socialising">Socialising</string>
    <string name="online_friends">Online Friends</string>
    <string name="field_cannot_empty">Field cannot be Empty</string>
    <string name="nothing_to_update">Nothing to Update</string>
    <string name="living_situation">Living Situation</string>
</resources>
