<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background"
    tools:context=".ui.signup.FragmentJoinUsPageOne">


    <ImageButton
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/back_button"
        android:background="@color/transparent"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        app:layout_constraintVertical_bias="0.07"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


    <TextView
        android:id="@+id/tv_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/i_am_a"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/back_btn"
        app:layout_constraintLeft_toLeftOf="@id/back_btn"
        />

    <Button
        android:id="@+id/man_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/editfield_bg"
        android:layout_marginTop="100dp"
        android:text="@string/man_string"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:layout_marginRight="30dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_description"
        app:layout_constraintLeft_toLeftOf="@id/tv_description"
        />

    <Button
        android:id="@+id/woman_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/editfield_bg"
        android:text="@string/women_string"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:layout_marginRight="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="20dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/man_btn"
        app:layout_constraintLeft_toLeftOf="@id/tv_description"
        />





</androidx.constraintlayout.widget.ConstraintLayout>